--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
-
-
+/* @media screen and (max-width: 768px) {
+  .top-buttons{
+    font-size: 0.8rem;
+    padding: 8px;
+    margin: 0.5rem;
+  }
+} */
 .DefaultFont{
     font-family :"Poppins";
 }
@@ -12,7 +17,7 @@
     border-radius: 4px;
     border-color: #8133BE;
     color: #555357;
-    ;
+    
   }
 
 
@@ -25,17 +30,17 @@ body {
   padding: 0;
   text-decoration: none;
   border-radius: 0px 10px 10px 0px;
-  position: relative;
+  /* position: relative; */
 }
 
 .container {
   display: flex;
+  
 }
 
 main {
   width: 100%;
-  padding: 20px;
-  
+  padding: 20px; 
   margin-left:250px ;
 
 }
@@ -43,7 +48,7 @@ main {
 .navbar {
   background: #8133be;
   color: azure;
-  height: auto;
+  
   width: auto;
   position:fixed;
   z-index: 1;
@@ -53,7 +58,6 @@ main {
   display: flex;
   align-items: center;
   padding: 20px 10px;
-
   margin: auto;
 }
 
@@ -88,7 +92,7 @@ main {
   padding: 30px;
   gap: 15px;
   font-size: 18px;
-  margin-top: 215px;
+  /* margin-top: 210px; */
 }
 
 .link:hover {
@@ -123,9 +127,6 @@ main {
   padding: 5px;
 }
 
-    
-
-    
 
   .dropdown:focus {
     border-color: #8133BE;
@@ -139,5 +140,10 @@ main {
 
   .dropdown::selection{
     background-color: #8133BE;
-  color: #fff;
+    color: #fff;
   }
+  .btn-component{
+    font-family :"Poppins";
+  }
+  
+ 
