--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,15 @@
-/* @media screen and (max-width: 768px) {
-  .top-buttons{
-    font-size: 0.8rem;
-    padding: 8px;
-    margin: 0.5rem;
+@media screen and (max-height: 320px) {
+  .linklogout {
+    position: fixed;
+    display: flex;
+    color: #d9d9d9;
+    padding: 30px;
+    /* gap: 15px; */
+    font-size: 18px;
+    bottom: 0px;
+    /* margin-top: 210px; */
   }
-} */
-.DefaultFont{
-    font-family :"Poppins";
 }
-
-.dropdown {
-    padding: 8px;
-    font-size: 16px;
-    font-family:'Poppins';
-    border: 1px solid #8133BE;
-    border-radius: 4px;
-    border-color: #8133BE;
-    color: #555357;
-    
-  }
-
 
 body {
   font-family: "Poppins";
@@ -33,24 +23,43 @@ body {
   /* position: relative; */
 }
 
+.DefaultFont {
+  font-family: "Poppins";
+}
+
+.dropdown {
+  padding: 8px;
+  font-size: 16px;
+  font-family: "Poppins";
+  border: 1px solid #8133be;
+  border-radius: 4px;
+  border-color: #8133be;
+  color: #555357;
+}
+
 .container {
   display: flex;
-  
+  min-height: 100vh;
+  margin: auto;
+  position: relative;
 }
 
 main {
   width: 100%;
-  padding: 20px; 
-  margin-left:250px ;
-
+  /* padding: 20px; */
+  margin-left: 250px;
 }
 
 .navbar {
+  left: 0;
+  top: 0;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
   background: #8133be;
   color: azure;
-  
   width: auto;
-  position:fixed;
+  position: fixed;
   z-index: 1;
 }
 
@@ -87,11 +96,13 @@ main {
 }
 
 .linklogout {
+  position: absolute;
   display: flex;
   color: #d9d9d9;
   padding: 30px;
-  gap: 15px;
+  /* gap: 15px; */
   font-size: 18px;
+  bottom: 50px;
   /* margin-top: 210px; */
 }
 
@@ -127,23 +138,20 @@ main {
   padding: 5px;
 }
 
+.dropdown:focus {
+  border-color: #8133be;
+  outline: 444;
+}
 
-  .dropdown:focus {
-    border-color: #8133BE;
-    outline: 444;
-  }
+.dropdown:checked {
+  background-color: #8133be;
+  color: #fff;
+}
 
-  .dropdown:checked{
-    background-color: #8133BE;
-    color: #fff;
-  }
-
-  .dropdown::selection{
-    background-color: #8133BE;
-    color: #fff;
-  }
-  .btn-component{
-    font-family :"Poppins";
-  }
-  
- 
+.dropdown::selection {
+  background-color: #8133be;
+  color: #fff;
+}
+.btn-component {
+  font-family: "Poppins";
+}
