--- a/src/Components/ActiveInactive/ActiveInactive.css
+++ b/src/Components/ActiveInactive/ActiveInactive.css
@@ -1,6 +1,6 @@
 .ActiveInactivePane{
     background-color: rgba(172, 172, 172, 0.33);
-    width:1000px;
+    width:100%;
     height:355px;
     border-radius: 20px;
     display:inline-block;
@@ -10,7 +10,7 @@
     padding:10px;
     color:#8742BC;
     font-size: 15px;
-    font-family: poppins;
+    font-family: "poppins";
     border-radius: 10px;
     margin-left: 20px;
     margin-top: 20px;
@@ -39,7 +39,7 @@ background-color: #8742BC;
     padding-left: 30px;
 }
 hr{
-    width:95%;
+    width:100%;
    margin-left: 0;
     text-align: left;
 }
