--- a/src/Component/ActiveInactive/ActiveInactive.css
+++ b/src/Component/ActiveInactive/ActiveInactive.css
@@ -1,11 +1,48 @@
-.ActiveInactivePane{
-    background-color: rgba(172, 172, 172, 0.33);
-    width:1000px;
-    height:355px;
-    border-radius: 20px;
-    display:inline-block;
+
+td{
+    font-family: poppins;
 }
-.B1,.B2{
+.table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  .table th,
+  .table td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  .table th {
+    background-color: #f2f2f2;
+  }
+  
+  .table tr:last-child td {
+    border-bottom: 1px solid #ddd;
+  }
+  
+  .cell {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  
+  .bold {
+    font-weight: bold;
+    font-size: 18px;
+  }
+  
+  .more-btn {
+    border:none;
+    border-radius: 5px;
+    font-family: poppins;
+    text-align: center;
+    background-color:#8742BC;
+    text-decoration: none;
+    display: inline-block;
+  
+   
+  }
+  .B1,.B2{
     cursor: pointer;
     padding:10px;
     color:#8742BC;
@@ -24,38 +61,9 @@ background-color: #8742BC;
 .B1:active{
     background-color: #8742BC;
 }
-.num{
-    font-size: 15px;
-}
-
-.data{
-    
-    padding-right:40px;
-    font-size: 13px;
-}
-.R1{
-    font-family: poppins;
-    padding-top: 12px;
-    padding-left: 30px;
-}
-hr{
-    width:95%;
-   margin-left: 0;
-    text-align: left;
-}
-.th{
-    text-align: left;
-}
-.b1{
-    border:none;
-    border-radius: 5px;
-    font-family: poppins;
-    text-align: center;
-    color:#8742BC;
-    background-color: rgba(240, 248, 255, 0);
-    margin-left: 35em;
-}
-.b1:hover{
-    background-color:#8742BC;
-    color:white;
+.ActiveInactivePane{
+    background-color: rgba(172, 172, 172, 0.33);
+    width:1000px;
+    height:355px;
+    border-radius: 20px;
 }
