--- a/src/Components/messages/SendAndRecivieMsg.css
+++ b/src/Components/messages/SendAndRecivieMsg.css
@@ -9,20 +9,40 @@
 }
 .MessagingPane{
     background-color: rgba(172, 172, 172, 0.404);
-    flex:8;
+    flex:4;
     padding:50px;
     margin: 12px;
     margin-right: 24px;
     border-radius: 15px;
-    height:25em;
+    height:30em;
+    overflow-x: hidden;
+    overflow-y: auto;
     
 }
+.MessagingPane::-webkit-scrollbar {
+    width: 0.5em;
+    padding-right:0.2em ;
+  }
+.MessagingPane::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    border-radius: 20px;}
+.Sidebar::-webkit-scrollbar {
+    width: 0.5em;
+  }
+.Sidebar::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    border-radius: 20px;
+
+
+  }
 .Sidebar{
     flex:2.5;
     background-color: rgba(172, 172, 172, 0.26);
-    height:50em;
+    height:calc(100vh - 140px);
     border-radius: 15px;
     margin:12px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .P2{
@@ -32,22 +52,23 @@
     border-radius: 15px;
     display: block;
     left:0;
-    width: 50%;
+    max-width: 75%;
+    
     font-family: poppins;
-    font-size: medium;
+    font-size: 14px;
     float: right; 
-    clear: both;
+    /* clear: both;  */
 }
 .P1{
     background-color: #D3FFC8;
     padding:15px;
     margin:12px;
     border-radius: 15px;
-    width: 50%;
+    max-width: 75%;
     font-family: poppins;
-    font-size: medium;
+    font-size: 14px;
     float: left;
-    clear: both;
+    /* clear: both;  */
 }
 .topic{
     padding:10px;
@@ -57,6 +78,7 @@
     border-radius: 10px;
     text-align: center;
     font-family: poppins;
+    
 }
 .ChatCard{
     margin-bottom: 5px;
@@ -67,6 +89,9 @@
     border-radius: 12px;
     font-family: poppins;
     
+}
+.ChatCard:hover{
+    background-color: rgb(221, 221, 221);
 }
 .T{
     display: flex;
